# transformer-from-scratch

./: Makefile  README.md  pyproject.toml  train.py  utils.py
src/: attention.py  layers.py  transformer.py
src/data/: __init__.py  dataset.py
src/layers/: attention.py
src/models/: attention.py  embeddings.py  layers.py  transformer.py
tests/: test_attention_cache.py  test_kv_cache.py
transformers_from_scratch/: attention.py  layers.py  transformer.py
transformers_from_scratch/data/: __init__.py
